removendo métodos sem uso
